# openthomas

./: AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  GROWTH.md  RSI.md  TRAINING.md
openthomas/: cli.py  config.py  llm.py  mcp_server.py
openthomas/agent/: loop.py
openthomas/forecast/: engine.py
openthomas/improve/: genome.py  loop.py  proposer.py
openthomas/kernel/: __init__.py  bounds.py  gate.py
openthomas/memory/: board.py  heartbeat.py  journal.py
openthomas/report/: brier.py  dispatch.py
openthomas/site/: feed.py
openthomas/train/: dataset.py  hub.py
openthomas/weather/: __init__.py  baseline.py  desk.py  gencast.py  localmodels.py  nws.py  replay.py  stations.py  temps.py  verification.py
paper/: openthomas-icaif.tex  openthomas.tex
scripts/nwp/: extract_gencast.py  extract_stations.py  run_gencast.sh  run_pangu.sh  run_remote.sh
site/: app.js  index.html  style.css
tests/: test_dispatch.py  test_improve.py  test_llm.py  test_playbook.py  test_site.py  test_train.py  test_weather.py
