[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openthomas"
version = "0.1.1"
description = "Autonomous AI trading agent for prediction markets (Polymarket, Kalshi): finds edge, manages risk, trades, and learns."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "OpenThomas contributors" }]
keywords = [
  "prediction-markets", "polymarket", "kalshi", "trading-bot", "ai-agent",
  "llm", "forecasting", "quantitative-trading", "autonomous-agent",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Office/Business :: Financial :: Investment",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
polymarket = ["polymarket-client"]  # official unified SDK (pre-release); py-clob-client is archived
kalshi = ["cryptography>=42.0"]
mcp = ["mcp>=1.2"]
hub = ["huggingface-hub>=0.30"]  # publish datasets/adapters; no torch needed
train = ["torch", "transformers", "peft", "datasets", "huggingface-hub>=0.30"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mcp>=1.2"]

[project.scripts]
openthomas = "openthomas.cli:app"
openthomas-mcp = "openthomas.mcp_server:main"

[project.urls]
Homepage = "https://github.com/PredictionMarketTrader/openthomas"
Repository = "https://github.com/PredictionMarketTrader/openthomas"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
